export const snapshot = {};

snapshot[`parse > returns proper branches 1`] = `
{
  branches: [
    {
      active: false,
      branch: "gin-blame",
      commit: "b2a1c55",
      kind: "local",
      message: "WIP",
      record: "  gin-blame          b2a1c55 [main: ahead 1, behind 5] WIP",
      target: "gin-blame",
      upstream: "main",
      worktree: undefined,
    },
    {
      active: true,
      branch: "main",
      commit: "227f6c0",
      kind: "local",
      message: "Merge pull request #102 from lambdalisue/upgrade-git-browse",
      record: "* main               227f6c0 [origin/main] Merge pull request #102 from lambdalisue/upgrade-git-browse",
      target: "main",
      upstream: "origin/main",
      worktree: undefined,
    },
    {
      active: false,
      branch: "support-bang-bk",
      commit: "de1f346",
      kind: "local",
      message: ":+1: A bang (!) to forcibly open a buffer",
      record: "  support-bang-bk    de1f346 [support-bang: gone] :+1: A bang (!) to forcibly open a buffer",
      target: "support-bang-bk",
      upstream: "support-bang",
      worktree: undefined,
    },
    {
      active: false,
      branch: "support-read",
      commit: "ecf6a74",
      kind: "local",
      message: ":+1: Add \`postProcessor\` options",
      record: "  support-read       ecf6a74 [origin/support-read: gone] :+1: Add \`postProcessor\` options",
      target: "support-read",
      upstream: "origin/support-read",
      worktree: undefined,
    },
    {
      active: false,
      branch: "support-references",
      commit: "f1d2830",
      kind: "local",
      message: ":shower: Remove unused variables",
      record: "  support-references f1d2830 [origin/support-references: ahead 12, behind 8] :shower: Remove unused variables",
      target: "support-references",
      upstream: "origin/support-references",
      worktree: undefined,
    },
    {
      active: false,
      branch: "upgrade-deps",
      commit: "3ecec96",
      kind: "local",
      message: ":herb: Force a custom serializer of \`assertSnapshot\`",
      record: "  upgrade-deps       3ecec96 [origin/upgrade-deps: gone] :herb: Force a custom serializer of \`assertSnapshot\`",
      target: "upgrade-deps",
      upstream: "origin/upgrade-deps",
      worktree: undefined,
    },
    {
      active: false,
      branch: "upgrade-git-browse",
      commit: "3a534bc",
      kind: "local",
      message: ":package: Upgrade git-browse",
      record: "  upgrade-git-browse 3a534bc [origin/upgrade-git-browse: gone] :package: Upgrade git-browse",
      target: "upgrade-git-browse",
      upstream: "origin/upgrade-git-browse",
      worktree: undefined,
    },
  ],
}
`;

snapshot[`parse > returns proper branches even with worktree 1`] = `
{
  branches: [
    {
      active: false,
      branch: "fix-branch-on-worktree",
      commit: "3476d25",
      kind: "local",
      message: ":herb: Add branch parse test",
      record: "+ fix-branch-on-worktree 3476d25 (/Users/alisue/ghq/github.com/lambdalisue/my [work] (tree)) [main: ahead 1] :herb: Add branch parse test",
      target: "fix-branch-on-worktree",
      upstream: "main",
      worktree: "/Users/alisue/ghq/github.com/lambdalisue/my [work] (tree)",
    },
    {
      active: false,
      branch: "gin-blame",
      commit: "b2a1c55",
      kind: "local",
      message: "WIP",
      record: "  gin-blame              b2a1c55 [main: ahead 1, behind 5] WIP",
      target: "gin-blame",
      upstream: "main",
      worktree: undefined,
    },
    {
      active: true,
      branch: "main",
      commit: "227f6c0",
      kind: "local",
      message: "Merge pull request #102 from lambdalisue/upgrade-git-browse",
      record: "* main                   227f6c0 [origin/main] Merge pull request #102 from lambdalisue/upgrade-git-browse",
      target: "main",
      upstream: "origin/main",
      worktree: undefined,
    },
    {
      active: false,
      branch: "support-bang-bk",
      commit: "de1f346",
      kind: "local",
      message: ":+1: A bang (!) to forcibly open a buffer",
      record: "  support-bang-bk        de1f346 [support-bang: gone] :+1: A bang (!) to forcibly open a buffer",
      target: "support-bang-bk",
      upstream: "support-bang",
      worktree: undefined,
    },
    {
      active: false,
      branch: "support-read",
      commit: "ecf6a74",
      kind: "local",
      message: ":+1: Add \`postProcessor\` options",
      record: "  support-read           ecf6a74 [origin/support-read: gone] :+1: Add \`postProcessor\` options",
      target: "support-read",
      upstream: "origin/support-read",
      worktree: undefined,
    },
    {
      active: false,
      branch: "support-references",
      commit: "f1d2830",
      kind: "local",
      message: ":shower: Remove unused variables",
      record: "  support-references     f1d2830 [origin/support-references: ahead 12, behind 8] :shower: Remove unused variables",
      target: "support-references",
      upstream: "origin/support-references",
      worktree: undefined,
    },
    {
      active: false,
      branch: "upgrade-deps",
      commit: "3ecec96",
      kind: "local",
      message: ":herb: Force a custom serializer of \`assertSnapshot\`",
      record: "  upgrade-deps           3ecec96 [origin/upgrade-deps: gone] :herb: Force a custom serializer of \`assertSnapshot\`",
      target: "upgrade-deps",
      upstream: "origin/upgrade-deps",
      worktree: undefined,
    },
    {
      active: false,
      branch: "upgrade-git-browse",
      commit: "3a534bc",
      kind: "local",
      message: ":package: Upgrade git-browse",
      record: "  upgrade-git-browse     3a534bc [origin/upgrade-git-browse: gone] :package: Upgrade git-browse",
      target: "upgrade-git-browse",
      upstream: "origin/upgrade-git-browse",
      worktree: undefined,
    },
  ],
}
`;
